prevent sidenav footer from shrinking on opening collapsed menu

--- a/src/scss/navigation/sidenav/_sidenav.scss
+++ b/src/scss/navigation/sidenav/_sidenav.scss
@@ -44,5 +44,6 @@
   }
   .sb-sidenav-footer {
     padding: 0.75rem;
+    flex-shrink: 0;
   }
 }
